syntax="proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
    int32 part1 = 1;
    int32 part2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 decompositionPart = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns(SumResponse) { };
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns(stream PrimeNumberDecompositionResponse) {};
}


